objects/Invoice__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Invoice</relationshipLabel>
        <relationshipName>Invoice</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issue_Date__c</fullName>
        <label>Issue Date</label>
        <type>Date</type>
    </fields>
    <label>Invoice</label>
    <nameField>
        <label>Invoice Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoice</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>